--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 										<h4 class="title">Master's degree, Computer Sciene, SFU<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content">
 											<h5 class="title">University of Waterloo <span class="list-year">(2020 - Present)</span></h5>
-											<p>I started my journal at Simon Fraser University as a Master's student in September, 2020.
+											<p>I started my journey at Simon Fraser University as a Master's student in September, 2020.
 												My research interests lie in Cybersecurity and Cryptography. I am proficient in Penetration
 												Testing and Ethical Hacking. I am building my skills in the field of Cyber Security.
 											</p><!--EDUCATION LIST DETAILS-->
@@ -239,7 +239,7 @@
 										<div class="list-content">
 											<h5 class="title">University of Waterloo <span class="list-year">(2016 - 2020)</span></h5>
 											<p>During my undergraduate study at the University of Waterloo. I took several essential CS courses 
-												such as Data Structure, Algorithm, Computer System, etc. In addition, I took a few CS courses 
+												such as Data Structure, Algorithm, Computer System, etc. In addition, I took many CS courses 
 												in a variety of professional fields like Aritifical Intelligence, Computer Security, Database 
 												Management and so on. The reason why I didn't study in depth in one specific research area is 
 												to discover my most interested research direction in the future career. Eventually, I intend 
@@ -271,7 +271,7 @@
 
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
-										<h4>IT Security Team Lead (Permanent Part-time)</h4>
+										<h4>Career Consultant | IT Security Team Lead (Permanent Part-time)</h4>
 										<h5>ALba inc.</h5>
 										<h6><div class="year">Oct 2020 - Present</div></h6>
 										<p>Conducting penetration testing on the ERP system. Gathering vulnerabilities and generating report includes
@@ -285,6 +285,9 @@
 										<h4>Graduate Teaching Assistant </h4>
 										<h5>Simon Fraser University</h5>
 										<h6><div class="year">Aug 2020 - Present</div></h6>
+										<p>Teaching Assistant for the course MACM 101 - Discrete Mathematics<br>
+											Teaching Assistant for the course CMPT 404 - Cryptography and Protocols
+										</p>
 										<p>Conducting tutorials and live Q&A sessions each week.<br>
 											Holding office hours and monitor an online discussion forum.<br>
 											Assisting the instructor in preparing and marking assignments and tests.
@@ -513,16 +516,17 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="myModalLabel">Smart Parking System</h4><!--PORTFOLIO IMAGE TITLE-->
+				<h4 class="modal-title" id="myModalLabel">Tor Research: Website Fingerprinting</h4><!--PORTFOLIO IMAGE TITLE-->
 			</div>
 			<div class="modal-body">
 				<div class="mf-content">
-						<p>Participated in the development of a parking garage integrated solution. The system
-							consists of license plate recognition, vehicle information management, payment system,
-							indoor vehicle locating and user side application.<br>
-							Worked on the backstage management system that manages the vehicle and payment
-							information. Utilized OpenCV to improve the license plate recognition rate. Developed
-							the user side APP and introduced the AR for vehicle finder route guidance.
+						<p>Website fingerprinting (WF) attacks allow a local passive eavesdropper to infer 
+							a user’s web activity by leveraging feature-rich patterns from his packet sequence.<br>
+							Although a lot of research shows the state-of-the-art WF attacks are effective even against 
+							Tor in a laboratory evaluation setting, none of the literature deploys the attack in Tor in practice.
+							To further investigate in this area and evaluate the WF attack classifying accuracy
+							of determining web user’s activity in real world; I plan to deploy various WF attacks on a Tor guard node
+							and collect the user’s traffic trace hence analyze the attack result.
 						</p>
 					</div>
 			</div>
@@ -535,19 +539,14 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="myModalLabel">V Parking - UW Parking Service</h4><!--PORTFOLIO IMAGE TITLE-->
+				<h4 class="modal-title" id="myModalLabel">Security Analysis for MetaOptima</h4><!--PORTFOLIO IMAGE TITLE-->
 			</div>
 			<div class="modal-body">
 				<div class="mf-content">
-						<p>Make parking smart, make life easier.<br>
-							Developed a parking app to help anyone who needs to park in the UW campus 
-							(available in the Apple App Store).<br>
-							Real-time status of the four main parking lots; acquiring recommended parking 
-							lots when searching your destination; detail information of each parking lot; 
-							records your car location and notices you before time up, etc.<br>
-							Currently, I am working on Natural Language Processing research to develop a new 
-							feature about voice control; researching privacy-preserving technologies for Location
-							Based Services.
+						<p>Collaborating with a team of two to conduct a penetration testing to evaluate 
+							the security of MetaOptima (A digital health company based in Vancouver, Canada).<br>
+							Generating a technical and business balanced report that includes detailed 
+							findings regarding vulnerabilities, provides situational analysis and mitigation options.<br>
 						</p>
 					</div>
 			</div>
@@ -560,7 +559,72 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel1">Autonomous Drivering Research Paper</h4><!--PORTFOLIO IMAGE TITLE-->
+					<h4 class="modal-title" id="myModalLabel1">Security Analysis of Multi-factor Authenticator</h4><!--PORTFOLIO IMAGE TITLE-->
+				</div>
+				<div class="modal-body">
+					<div class="mf-content">
+							<p>Working in a group of two to conduct a security analysis of 
+								two-phase authenticator applications such as Google Authenticator 
+								Microsoft Authenticator, and Lastpass Authenticator.<br>
+								Patching the vulnerabilities of Google Authenticator.
+							</p>
+						</div>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel2">WatsPLAN</h4><!--PORTFOLIO IMAGE TITLE-->
+				</div>
+				<div class="modal-body">
+					<div class="mf-content">
+							<p>Developed a convenient self-progression tool to help UWaterloo students with course planning and 
+								to ensure degree requirements are being met (available in Apple App Store, Google Play).<br>
+								Incorporated Firebase Cloud Firestore/Storage NoSQL database to store and match users’ unique 
+								characteristics. Integrated Firebase Authentication to protect user’s privacy and data confidentiality.<br>
+							</p>
+						</div>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel3">V Parking - UW Parking Service</h4><!--PORTFOLIO IMAGE TITLE-->
+				</div>
+				<div class="modal-body">
+					<div class="mf-content">
+							<p>Make parking smart, make life easier.<br>
+								Developed a parking app to help anyone who needs to park in the UW campus 
+								(available in the Apple App Store).<br>
+								Real-time status of the four main parking lots; acquiring recommended parking 
+								lots when searching your destination; detail information of each parking lot; 
+								records your car location and notices you before time up, etc.<br>
+								Currently, I am working on Natural Language Processing research to develop a new 
+								feature about voice control; researching privacy-preserving technologies for Location
+								Based Services.
+							</p>
+						</div>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel4">Autonomous Drivering Research Paper</h4><!--PORTFOLIO IMAGE TITLE-->
 				</div>
 				<div class="modal-body">
 					<div class="mf-content">
@@ -585,83 +649,20 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel2">Text Categorizer</h4><!--PORTFOLIO IMAGE TITLE-->
-				</div>
-				<div class="modal-body">
-					<div class="mf-content">
-							<p>Text categorization is an important task in natural language processing and information retrieval. 
-								For instance, news articles, emails or blogs are often classified by topics.<br>
-								I Implemented two classifiers using both Decision Tree and Bayesian Network. I trained models first 
-								and used the trained models to process classifying; the accuracy can reach up to 88.97%.<br>
-								They were optimized using the sparse matrix which mad the process hundreds of times faster than the naive algorithm.
-							</p>
-						</div>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel3">MIPS Assembler and C Compiler</h4><!--PORTFOLIO IMAGE TITLE-->
-				</div>
-				<div class="modal-body">
-					<div class="mf-content">
-							<p>I Implemented a compiler for C and an assembler for MIPS using C++.<br>
-								To complete these two tools I had learned the following knowledge:<br>
-									• Machine architecture and assembly language<br> 
-									• Assemblers, linkers, and loaders<br>
-									• Regular languages and scanning<br>
-									• Context-free languages and parsing<br>
-									• Semantic Analysis and Code generation<br> 
-									• Runtime organization and data layout<br>
-							</p>
-						</div>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel4">Publication Management System</h4><!--PORTFOLIO IMAGE TITLE-->
-				</div>
-				<div class="modal-body">
-					<div class="mf-content">
-							<p>I developed a publication database management system using C together with SQL and followed the static embedded SQL protocol.<br>
-								This application could print a list of records for each publication by an author with a
-								name; it also can print a list of records for each article appearing in proceedings or journals
-								identified by a publication id. Users can adjust the order that records appear according to
-								the year, name of the first author. The administrator has the right to insert, delete, amend the data in the database.
-							</p>
-						</div>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
 <div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel5">Socery: The Game</h4><!--PORTFOLIO IMAGE TITLE-->
+					<h4 class="modal-title" id="myModalLabel5">Text Categorizer</h4><!--PORTFOLIO IMAGE TITLE-->
 				</div>
 				<div class="modal-body">
 					<div class="mf-content">
-							<p>We designed a collectible card game and implemented using C++.<br>
-								This game is like a combination of the hearthstone and Yu-Gi-Oh!.
+							<p>Text categorization is an important task in natural language processing and 
+								information retrieval. For instance, news articles, emails or blogs are often classified by topics.<br>
+								I Implemented two classifiers using both Decision Tree and Bayesian Network. I trained models first 
+								and used the trained models to process classifying; the accuracy can reach up to 88.97%.<br>
+								They were optimized using the locality of reference which mads the process hundreds of times faster than the naive algorithm.
 							</p>
 						</div>
 				</div>
@@ -674,12 +675,17 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel6">Siege Robot</h4><!--PORTFOLIO IMAGE TITLE-->
+					<h4 class="modal-title" id="myModalLabel6">Games</h4><!--PORTFOLIO IMAGE TITLE-->
 				</div>
 				<div class="modal-body">
 					<div class="mf-content">
-							<p>A robot that can shoot boulders, breach defences and destroy towers.<br>
-								Won a 2016 Rookie Inspiration Award in First Robotics Competition.
+						<h4>Coronavania – GGJ' 20</h4>
+							<p>Worked as a game developer in a group of three in Global Game Jam 2020.<br>
+								Designed and developed a 2D platformer adventure game in 24 hours.
+							</p>
+						<h4>Sorcery: The Game</h4>
+							<p>We designed a collectible card game and implemented using C++.<br>
+								This game is like a combination of the hearthstone and Yu-Gi-Oh!.
 							</p>
 						</div>
 				</div>
@@ -692,10 +698,15 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel7">Soccer Player Robot</h4><!--PORTFOLIO IMAGE TITLE-->
+					<h4 class="modal-title" id="myModalLabel7">Robots</h4><!--PORTFOLIO IMAGE TITLE-->
 				</div>
 				<div class="modal-body">
 					<div class="mf-content">
+						<h4>FRC</h4>
+							<p>A robot that can shoot boulders, breach defences and destroy towers.<br>
+								Won a 2016 Rookie Inspiration Award in First Robotics Competition.
+							</p>
+						<h4>Soccer Players</h4>
 							<p>A striker robot and a goalkeeper robot that can interact with each other.<br>
 								Won a gold medal in the robotics soccer game in China National Robotics Competition.
 							</p>
